service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kotlin-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kotlin-service
  template:
    metadata:
      labels:
        app: kotlin-service
    spec:
      containers:
        - name: kotlin-service
          image: shoubhikghosh83/kotlin-service:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kotlin-service
  labels:
    app: kotlin-service
spec:
  selector:
    app: kotlin-service
  type: NodePort
  ports:
    - nodePort: 30163
      port: 8080
      targetPort: 8080
