ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: kotlin-service-ingress
 annotations:
  kubernetes.io/ingress.class: addon-http-application-routing
  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
 - host: kotlin-service-ingress.c47e179c12b340ceb13b.westeurope.aksapp.io 
   http:
    paths:
    - path: /sb
      backend:
       serviceName: kotlin-service
       servicePort: 8080
